<resources>
    <string name="app_name">Today</string>

    <!--<string-array name="cityNames">-->
    <!--<item>基隆市</item>-->
    <!--<item>新北市</item>-->
    <!--<item>臺北市</item>-->
    <!--<item>宜蘭縣</item>-->
    <!--<item>桃園市</item>-->
    <!--<item>新竹縣</item>-->
    <!--<item>新竹市</item>-->
    <!--<item>苗栗縣</item>-->
    <!--<item>臺中市</item>-->
    <!--<item>彰化縣</item>-->
    <!--<item>南投縣</item>-->
    <!--<item>雲林縣</item>-->
    <!--<item>嘉義市</item>-->
    <!--<item>嘉義縣</item>-->
    <!--<item>臺南市</item>-->
    <!--<item>高雄市</item>-->
    <!--<item>屏東縣</item>-->
    <!--<item>臺東縣</item>-->
    <!--<item>花蓮縣</item>-->
    <!--<item>澎湖縣</item>-->
    <!--<item>金門縣</item>-->
    <!--<item>連江縣</item>-->
    <!--</string-array>-->

    <string name="tb_constellation">星座運勢</string>
    <string name="daily">記事本</string>

    <string name="cityName">縣市名稱</string>
    <string name="temp">現在溫度</string>
    <string name="T">0 °C</string>
    <string name="Wx">天氣現象</string>
    <string name="Pop6h">降雨量: %</string>
    <string name="CI">舒適度</string>
    <string name="AT">體感溫度 °C</string>


    <string name="conTitle">星座</string>
    <string name="conLucky">運勢</string>
    <string name="conInfo">內容</string>

    <string name="progress">Loading...</string>

    <string name="dailyTitle">標題</string>
    <string name="dailyContent">內容</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="desc">描述</string>
    <string name="time">Time</string>
    <string name="author">新聞來源</string>
    <string name="news">新聞</string>
    <string name="weather">天氣</string>


</resources>
