<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fl_weather"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.FragmentWeather">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tb_weather"
                android:background="#66CDAA"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="1.0">


            <ImageView
                    android:id="@+id/iv_location"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_location_on_black_24dp"
                    tools:layout_editor_absoluteX="104dp"
                    tools:layout_editor_absoluteY="8dp" />

            <TextView
                    android:id="@+id/tv_cityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cityName"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"
                    android:textSize="30sp"
                    tools:layout_editor_absoluteX="148dp"
                    tools:layout_editor_absoluteY="8dp" />


            <ImageButton
                    android:id="@+id/btn_searchCity"
                    android:layout_width="35dp"
                    android:layout_height="45dp"
                    android:layout_gravity="end"
                    android:background="@drawable/searchcity"
                    tools:layout_editor_absoluteX="246dp"
                    tools:layout_editor_absoluteY="3dp" />

        </androidx.appcompat.widget.Toolbar>





        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tb_weather"
                tools:layout_editor_absoluteX="0dp">


            <TextView
                    android:id="@+id/nowWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/temp"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/tv_T"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/T"
                    android:textColor="#2196F3"
                    android:textSize="70sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nowWeather" />


<!--            <ImageView-->
<!--                    android:id="@+id/iv_Wx"-->
<!--                    android:layout_width="30dp"-->
<!--                    android:layout_height="30dp"-->
<!--                    android:layout_marginStart="24dp"-->
<!--                    android:layout_marginEnd="8dp"-->
<!--                    app:layout_constraintBottom_toBottomOf="@+id/tv_Wx"-->
<!--                    app:layout_constraintEnd_toStartOf="@+id/tv_Wx"-->
<!--                    app:layout_constraintStart_toStartOf="parent" />-->


            <!--            <ImageView-->
<!--                    android:id="@+id/iv_CI"-->
<!--                    android:layout_width="27dp"-->
<!--                    android:layout_height="27dp"-->
<!--                    android:layout_marginStart="8dp"-->
<!--                    android:layout_marginEnd="8dp"-->
<!--                    app:layout_constraintBottom_toBottomOf="@+id/tv_CI"-->
<!--                    app:layout_constraintEnd_toStartOf="@+id/tv_CI"-->
<!--                    app:layout_constraintStart_toEndOf="@+id/tv_Wx" />-->


            <TextView
                    android:id="@+id/tv_Wx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/Wx"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.426"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_T" />

            <ImageView
                    android:id="@+id/iv_PoP6h"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/tv_PoP6h"
                    app:layout_constraintHorizontal_bias="0.51"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_Wx" />

            <TextView
                    android:id="@+id/tv_PoP6h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/Pop6h"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@+id/iv_AT"
                    app:layout_constraintStart_toEndOf="@+id/iv_PoP6h"
                    app:layout_constraintTop_toTopOf="@+id/iv_PoP6h" />

            <TextView
                    android:id="@+id/tv_CI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/CI"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/tv_Wx"
                    app:layout_constraintTop_toTopOf="@+id/tv_Wx" />

            <ImageView
                    android:id="@+id/iv_AT"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toStartOf="@+id/tv_AT"
                    app:layout_constraintStart_toEndOf="@+id/tv_PoP6h"
                    app:layout_constraintTop_toTopOf="@+id/tv_PoP6h" />

            <TextView
                    android:id="@+id/tv_AT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/Pop6h"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/iv_AT"
                    app:layout_constraintTop_toTopOf="@+id/iv_AT" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <!--<com.google.android.material.floatingactionbutton.FloatingActionButton-->
                <!--android:id="@+id/fbtn"-->
                <!--android:layout_gravity="bottom|end"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="12dp"-->
                <!--android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>-->
        <!--<com.google.android.material.floatingactionbutton.FloatingActionButton-->
                <!--android:id="@+id/fbtn_search"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--app:layout_constraintStart_toStartOf="@+id/fbtn" android:layout_marginBottom="8dp"-->
                <!--app:layout_constraintBottom_toTopOf="@+id/fbtn"/>-->

        <!--<com.google.android.material.floatingactionbutton.FloatingActionButton-->
                <!--android:id="@+id/fbtn_picture"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--app:layout_constraintStart_toStartOf="@+id/fbtn_search" android:layout_marginBottom="8dp"-->
                <!--app:layout_constraintBottom_toTopOf="@+id/fbtn_search"/>-->

        <!--<androidx.constraintlayout.widget.ConstraintLayout-->
        <!--android:id="@+id/con"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="321dp"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/swipeRefreshLayout"-->
        <!--app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"-->
        <!--app:layout_constraintVertical_bias="0.0">-->


        <!--<ImageView-->
        <!--android:id="@+id/iv_bg"-->
        <!--android:background="@null"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="217dp"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"/>-->


        <!--<ImageButton-->
        <!--android:id="@+id/ibtn_left"-->
        <!--android:background="@null"-->
        <!--android:layout_width="50dp"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_marginTop="64dp"-->
        <!--app:layout_constraintTop_toTopOf="@+id/iv_bg" app:layout_constraintStart_toStartOf="parent"-->
        <!--android:layout_marginStart="8dp"/>-->

        <!--<ImageButton-->
        <!--android:id="@+id/ibtn_right"-->
        <!--android:background="@null"-->
        <!--android:layout_width="50dp"-->
        <!--android:layout_height="50dp"-->
        <!--app:layout_constraintTop_toTopOf="@+id/ibtn_left"-->
        <!--app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>-->


        <!--<ImageView-->
        <!--android:id="@+id/iv_game"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="70dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--app:layout_constraintBottom_toBottomOf="@+id/iv_bg"-->
        <!--tools:layout_editor_absoluteX="155dp" android:layout_marginTop="8dp"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/ibtn_left" app:layout_constraintVertical_bias="0.176"/>-->

        <!--</androidx.constraintlayout.widget.ConstraintLayout>-->


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>